fix the UI and fields and also finish the Signup functionalities for the admin dashboard

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,7 +1,7 @@
-<footer style="margin-top: 45px;" class="bg-light py-3 bg-primary fixed-bottom mt-5">
+<footer style="margin-top: 45px;" class="bg-light py-3 bg-primary">
     
     <div class="container">
-        <div class="col-md-6">
+        <div class="col-md-12">
           <span>Follow us on:</span>
           <a href="#" class="mx-2"><i class="fab fa-facebook-f"></i></a>
           <a href="#" class="mx-2"><i class="fab fa-twitter"></i></a>
