--- a/templates/admin_login/signup.html
+++ b/templates/admin_login/signup.html
@@ -5,7 +5,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
   <body>
-    <div class="container bg-light mt-5">
+    <div style="margin-top: 120px;" class="container bg-light">
       <form method = "POST">
         {% csrf_token %}
         {{form|crispy}}
