--- a/templates/transport/index.html
+++ b/templates/transport/index.html
@@ -2,44 +2,53 @@
 {% load static %}
 
 {% block content %}
+{% load static %}
     {% comment %} <div class="mt-5"> {% endcomment %}
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-            </ol>
-            {% for slide in slide%}
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img height=400 src="{{slide.picture.url}}"  class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>{{slide.town}}</h5>
-                    <p>{{slide.text}}</p>
-                  </div>
-                </div>
-
-              {% endfor %}
-            
+        
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner mt-5">
+          <div class="carousel-item active">
+            <img height="500" src="{% static 'assets/images/flutter.jpg' %}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
             </div>
-            <button class="carousel-control-prev w-100" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-
-            </button>
           </div>
-    </div>
-
+          <div class="carousel-item">
+            <img height="500" src="{% static 'assets/images/flutter2.jpg' %}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img height="500" src="{% static 'assets/images/frontend.jpg' %}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </button>
+      </div>
 
     <div class="container mt-5 ml-auto">
         <center>
             <span style="font-size:x-large" class="text-center">
                 <span>Click on this Link to Reserve a Ticket </span>
-                <span><a class="btn btn-outline-primary" href="{% url 'customer_registration' %}">Buy Ticket</a></span>
+                <span><a class="btn btn-lg btn-outline-primary" href="{% url 'customer_registration' %}">Buy Ticket</a></span>
             </span>
         </center>
     </div>
