--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,4 +1,4 @@
-<footer style="margin-top: 45px;" class="bg-light py-3 bg-primary">
+<footer style="margin-top: 45px;" class="bg-light py-3 bg-primary fixed-bottom">
     
     <div class="container">
         <div class="col-md-12">
