--- a/templates/admin_login/signin.html
+++ b/templates/admin_login/signin.html
@@ -19,6 +19,12 @@
             <input type="password" class="form-control" id="password" name="password">
         </div>
 
+
+        <div style="padding: 10px" class="form-group">
+          <label for="password">City:</label>
+          <input type="text" class="form-control" id="password" name="City">
+        </div>
+
         
         <br>
         <button type="submit" style="margin-bottom: 10px;" class="btn btn-primary">Login</button>
